completed creation EXPANDABLE CHECKBOX LIST

--- a/Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs.pug
+++ b/Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs.pug
@@ -1,4 +1,4 @@
 mixin DescriptionForButtonsAndInputs(content)
-    div.DescriptionForButtonsAndInputs&attributes(attributes) #{content}
+    span.DescriptionForButtonsAndInputs&attributes(attributes) #{content}
         if block
             block
