--- a/Common.blocks/ExpandableCheckboxList/-Header/ExpandableCheckboxList-Header.scss
+++ b/Common.blocks/ExpandableCheckboxList/-Header/ExpandableCheckboxList-Header.scss
@@ -26,6 +26,8 @@
   .ExpandableCheckboxList-Header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 266px;
   }
 }
 
