--- a/Common.blocks/PaginationBlock/PaginationBlock.scss
+++ b/Common.blocks/PaginationBlock/PaginationBlock.scss
@@ -1,43 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .ExpandableCheckboxList-List {
+  .PaginationBlock {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .ExpandableCheckboxList-List {
+  .PaginationBlock {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .ExpandableCheckboxList-List {
+  .PaginationBlock {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .ExpandableCheckboxList-List {
+  .PaginationBlock {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .ExpandableCheckboxList-List {
-    padding: 0;
-    margin: 0 0 0 0;
-    display: none;
+  .PaginationBlock {
+
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .ExpandableCheckboxList-List {
+  .PaginationBlock {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .ExpandableCheckboxList-List {
+  .PaginationBlock {
 
   }
 }
