--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,12 @@
+include ../Common.blocks/InputForButtonsAndInputs/-Checkbox/InputForButtonsAndInputs-Checkbox.pug
+include ../Common.blocks/Wrapper/-ExpandableCheckboxListOpen/Wrapper-ExpandableCheckboxListOpen.pug
+include ../Common.blocks/CommentBlock/-WrapperDescription/CommentBlock-WrapperDescription.pug
+include ../Common.blocks/CommentBlock/-WrapperLike/CommentBlock-WrapperLike.pug
+include ../Common.blocks/CommentBlock/-WrapperLikeAndDescription/CommentBlock-WrapperLikeAndDescription.pug
+include ../Common.blocks/LikeButtonBlock/LikeButtonBlock.pug
+include ../Common.blocks/CommentBlock/CommentBlock.pug
+include ../Common.blocks/BulletList/BulletList.pug
+include ../Common.blocks/PaginationBlock/PaginationBlock.pug
 include ../Common.blocks/PayButton/PayButton.pug
 include ../Common.blocks/Button/Button.pug
 include ../Common.blocks/ButtonsBlock/-WrapperForSamples/ButtonsBlock-WrapperForSamples.pug
@@ -258,59 +267,75 @@ html
                                         i.material-icons expand_more
                                 +List.ExpandableCheckboxList-List()
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Завтрак
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Письменный стол
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Стул для кормления
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Кроватка
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Телевизор
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Шампунь
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Телевизор
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Шампунь
-                        +Wrapper-ExpandableCheckboxList()
+                        +Wrapper-ExpandableCheckboxListOpen()
                             +ExpandableCheckboxList()
                                 +TitleBlock.ExpandableCheckboxList-Header()
                                     +TitleBlock-H3() expandable checkbox list
                                     +TitleBlock-Icon()
                                         i.material-icons expand_more
-                                +List.ExpandableCheckboxList-List()
+                                +List.ExpandableCheckboxList-List(style="display: block;")
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox")
                                         +DescriptionForButtonsAndInputs() Завтрак
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" checked class="checkArrow")
                                         +DescriptionForButtonsAndInputs() Письменный стол
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" checked class="checkArrow")
                                         +DescriptionForButtonsAndInputs() Стул для кормления
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" checked class="checkArrow")
                                         +DescriptionForButtonsAndInputs() Кроватка
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" )
                                         +DescriptionForButtonsAndInputs() Телевизор
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" )
                                         +DescriptionForButtonsAndInputs() Шампунь
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" )
                                         +DescriptionForButtonsAndInputs() Телевизор
                                     +List-Item()
-                                        +InputForButtonsAndInputs(type="checkbox")
+                                        +InputForButtonsAndInputs()
+                                            +InputForButtonsAndInputs-Checkbox(type="checkbox" )
                                         +DescriptionForButtonsAndInputs() Шампунь
                         +Wrapper-DescriptionBlock()
                             +FigureDescriptionBlock()
@@ -364,14 +389,15 @@ html
                                         +List-Item()
                                             +InputForButtonsAndInputs(type="checkbox")
                                             +DescriptionForButtonsAndInputs() Получать спецпредложения
-                                +LikeButton()
+                                +LikeButtonBlock()
                                     +TitleBlock.ExpandableCheckboxList-Header()
                                         +TitleBlock-H3() like button
                                     +List.ExpandableCheckboxList-List()
                                         +List-Item()
-                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +LikeButton()
+                                            +LikeButton()
                                         +List-Item()
-                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +LikeButton()
                                 +RateButton()
                                     +TitleBlock.ExpandableCheckboxList-Header()
                                         +TitleBlock-H3() rate button
@@ -393,7 +419,7 @@ html
                                 //+RichCheckboxButtons()
                                 +ExpandableCheckboxList()
                                     +TitleBlock.ExpandableCheckboxList-Header()
-                                        +TitleBlock-H3() Rich Checkbox Buttons
+                                        +TitleBlock-H3() rich checkbox buttons
                                     +List.ExpandableCheckboxList-List()
                                         +List-Item()
                                             +InputForButtonsAndInputs(type="checkbox")
@@ -408,11 +434,13 @@ html
                             +Wrapper.Content-RightColumn()
                                 +RangeSliderBlock()
                                     +TitleBlock.ExpandableCheckboxList-Header()
-                                        +TitleBlock-H3() Range Slider
+                                        +TitleBlock-H3() range slider
                                         +TitleBlock-H6() 5 000₽ - 10 000₽
 
                                     +RangeSlider()
                                 +ButtonsBlock()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() buttons
                                     +ButtonsBlock-WrapperForSamples()
                                         +Button()
                                         +Button()
@@ -424,13 +452,44 @@ html
                                         +Button()
                                     +ButtonsBlock-WrapperForSamples()
                                         +PayButton()
+                                +PaginationBlock()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() pagination
+                                +Wrapper-FirstDropdownGuests()
+                                    +InputBlock()(class='')
+                                        +InputBlock-Wrapper
+                                            +InputBlock-FieldName('dropdown')
+                                            +InputBlock-FieldDescription('default')(class='InputBlock_pdTop_3px')
+                                        +InputBlock-Form()
+                                            Select.DropdownGuests(multiple='multiple', id="DropdownGuests3", name='DropdownGuests', size='3')
+                                                +DropdownGuests-Option('взрослые')(value='adults')
+                                                +DropdownGuests-Option('дети')(value='children')
+                                                +DropdownGuests-Option('младенцы')(value='babies')
+                                +BulletList()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() Checkbox Buttons
+                                    +List.ExpandableCheckboxList-List()
+                                        +List-Item()
+                                            +DescriptionForButtonsAndInputs() Нельзя с питомцами
+                                        +List-Item()
+                                            +DescriptionForButtonsAndInputs() Без вечеринок и мероприятий
+                                        +List-Item()
+                                            +DescriptionForButtonsAndInputs() Время прибытия — после 13:00, а выезд до 12:00
                         +Wrapper()
+                            +CommentBlock()
+                                +FigureDescriptionBlock()
+                                    +FigureDescriptionBlock-Wrapper()
+                                        +ImageForButtonsAndInputs()
+                                            i.material-icons insert_emoticon
+                                        +FigureDescriptionBlock-Figcaption()
+                                            +TitleForButtonsAndInputs() Мурад Сарафанов
+                                            +DescriptionForButtonsAndInputs() 5 дней назад
+                                +CommentBlock-WrapperLikeAndDescription()
+                                    +CommentBlock-WrapperLike()
+                                        +LikeButton()
+                                    +CommentBlock-WrapperDescription()
+                                        +DescriptionForButtonsAndInputs() Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
 
 
 
 //+Wrapper-CheckboxButtons()
-
-
-
-
-
