--- a/pages/index.scss
+++ b/pages/index.scss
@@ -171,3 +171,13 @@
 @import '../Common.blocks/ButtonsBlock/-WrapperForSamples/ButtonsBlock-WrapperForSamples';
 @import '../Common.blocks/Button/Button';
 @import '../Common.blocks/PayButton/PayButton';
+@import '../Common.blocks/PaginationBlock/PaginationBlock';
+@import '../Common.blocks/BulletList/BulletList';
+@import '../Common.blocks/CommentBlock/CommentBlock';
+@import '../Common.blocks/LikeButtonBlock/LikeButtonBlock';
+@import '../Common.blocks/CommentBlock/-WrapperLikeAndDescription/CommentBlock-WrapperLikeAndDescription';
+@import '../Common.blocks/CommentBlock/-WrapperLike/CommentBlock-WrapperLike';
+@import '../Common.blocks/CommentBlock/-WrapperDescription/CommentBlock-WrapperDescription';
+@import '../Common.blocks/CommentBlock/-Photo/CommentBlock-Photo';
+@import '../Common.blocks/Wrapper/-ExpandableCheckboxListOpen/Wrapper-ExpandableCheckboxListOpen';
+@import '../Common.blocks/InputForButtonsAndInputs/-Checkbox/InputForButtonsAndInputs-Checkbox';
