--- a/Common.blocks/TitleBlock/-Icon/TitleBlock-Icon.scss
+++ b/Common.blocks/TitleBlock/-Icon/TitleBlock-Icon.scss
@@ -24,7 +24,20 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .TitleBlock-Icon {
-    padding-right: 5px;
+    padding-right: 10px;
+    font-family: Material Icons;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    /* Dark 50% */
+
+    color: $DarkShade50;
+
   }
 }
 
