--- a/Common.blocks/Wrapper/-ExpandableCheckboxList/Wrapper-ExpandableCheckboxList.scss
+++ b/Common.blocks/Wrapper/-ExpandableCheckboxList/Wrapper-ExpandableCheckboxList.scss
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .Wrapper-ExpandableCheckboxList {
-
+    padding-top: 146px;
   }
 }
 
