blocks comfort and convenience completed

--- a/Common.blocks/ImageForButtonsAndInputs/ImageForButtonsAndInputs.scss
+++ b/Common.blocks/ImageForButtonsAndInputs/ImageForButtonsAndInputs.scss
@@ -24,7 +24,18 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .ImageForButtonsAndInputs {
-
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background: $DatepickerGradient;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    & i {
+      font-size: 48px;
+      line-height: 41px;
+    }
   }
 }
 
