--- a/pages/index.scss
+++ b/pages/index.scss
@@ -181,3 +181,7 @@
 @import '../Common.blocks/CommentBlock/-Photo/CommentBlock-Photo';
 @import '../Common.blocks/Wrapper/-ExpandableCheckboxListOpen/Wrapper-ExpandableCheckboxListOpen';
 @import '../Common.blocks/InputForButtonsAndInputs/-Checkbox/InputForButtonsAndInputs-Checkbox';
+
+@import '../Common.blocks/FigureDescriptionBlock/-Header/FigureDescriptionBlock-Header';
+@import '../Common.blocks/FigureDescriptionBlock/-Hr/FigureDescriptionBlock-Hr';
+@import '../Common.blocks/Wrapper/-DescriptionBlockFacilities/Wrapper-DescriptionBlockFacilities';
