--- a/Common.blocks/FigureDescriptionBlock/-Figcaption/FigureDescriptionBlock-Figcaption.scss
+++ b/Common.blocks/FigureDescriptionBlock/-Figcaption/FigureDescriptionBlock-Figcaption.scss
@@ -24,7 +24,8 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .FigureDescriptionBlock-Figcaption {
-
+    padding-left: 10px;
+    padding-top: 1px;
   }
 }
 
