--- a/Common.blocks/ImageForButtonsAndInputs/ImageForButtonsAndInputs.pug
+++ b/Common.blocks/ImageForButtonsAndInputs/ImageForButtonsAndInputs.pug
@@ -1,4 +1,4 @@
 mixin ImageForButtonsAndInputs(content)
-    div.ImageForButtonsAndInputs&attributes(attributes) #{content}
+    span.ImageForButtonsAndInputs&attributes(attributes) #{content}
         if block
             block
