--- a/Common.blocks/Wrapper/-DescriptionBlock/Wrapper-DescriptionBlock.scss
+++ b/Common.blocks/Wrapper/-DescriptionBlock/Wrapper-DescriptionBlock.scss
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .Wrapper-DescriptionBlock {
-
+    margin-top: 40px;
   }
 }
 
