--- a/Common.blocks/Wrapper/-DescriptionBlockFacilities/Wrapper-DescriptionBlockFacilities.scss
+++ b/Common.blocks/Wrapper/-DescriptionBlockFacilities/Wrapper-DescriptionBlockFacilities.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .FigureDescriptionBlock-Wrapper {
+  .Wrapper-DescriptionBlockFacilities {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .FigureDescriptionBlock-Wrapper {
+  .Wrapper-DescriptionBlockFacilities {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .FigureDescriptionBlock-Wrapper {
+  .Wrapper-DescriptionBlockFacilities {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .FigureDescriptionBlock-Wrapper {
+  .Wrapper-DescriptionBlockFacilities {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .FigureDescriptionBlock-Wrapper {
-    display: flex;
+  .Wrapper-DescriptionBlockFacilities {
+    margin-top: 23px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .FigureDescriptionBlock-Wrapper {
+  .Wrapper-DescriptionBlockFacilities {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .FigureDescriptionBlock-Wrapper {
+  .Wrapper-DescriptionBlockFacilities {
 
   }
 }
