--- a/pages/index.scss
+++ b/pages/index.scss
@@ -204,3 +204,15 @@
 @import '../Common.blocks/Toggle/-Wrapper/Toggle-Wrapper';
 @import '../Common.blocks/Wrapper/-Toggle/Wrapper-Toggle';
 @import '../Common.blocks/Wrapper/-LikeButton/Wrapper-LikeButton';
+@import '../Common.blocks/LikeButton/LikeButton';
+@import '../Common.blocks/LikeButton/-Button/LikeButton-Button';
+@import '../Common.blocks/LikeButton/-Label/LikeButton-Label';
+@import '../Common.blocks/Wrapper/-ToggleWrapper/Wrapper-ToggleWrapper';
+@import '../Common.blocks/Wrapper/-LikeButtonWrapper/Wrapper-LikeButtonWrapper';
+@import '../Common.blocks/LikeButton/-Icon/LikeButton-Icon';
+@import '../Common.blocks/LikeButton/-NumberLikes/LikeButton-NumberLikes';
+@import '../Common.blocks/RadioButtons/-RadioButton/_Active/RadioButtons-RadioButton_active';
+@import '../Common.blocks/LikeButton/-Icon/_active/LikeButton-Icon_active';
+
+@import '../Common.blocks/LikeButton/-NumberLikes/_active/LikeButton-NumberLikes_active';
+@import '../Common.blocks/Wrapper/-LikeButtonWrapperFirst/Wrapper-LikeButtonWrapperFirst';
