--- a/Common.blocks/LikeButton/-Button/LikeButton-Button.scss
+++ b/Common.blocks/LikeButton/-Button/LikeButton-Button.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .Wrapper-LikeButton {
+  .LikeButton-Button {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Wrapper-LikeButton {
+  .LikeButton-Button {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Wrapper-LikeButton {
+  .LikeButton-Button {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Wrapper-LikeButton {
+  .LikeButton-Button {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Wrapper-LikeButton {
-    margin-bottom: 28px;
+  .LikeButton-Button {
+
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Wrapper-LikeButton {
+  .LikeButton-Button {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Wrapper-LikeButton {
+  .LikeButton-Button {
 
   }
 }
