--- a/Common.blocks/LikeButton/-NumberLikes/LikeButton-NumberLikes.scss
+++ b/Common.blocks/LikeButton/-NumberLikes/LikeButton-NumberLikes.scss
@@ -1,41 +1,52 @@
 @media only screen and (max-width: 576px) {
-  .Wrapper-LikeButton {
+  .LikeButton-NumberLikes {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Wrapper-LikeButton {
+  .LikeButton-NumberLikes {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Wrapper-LikeButton {
+  .LikeButton-NumberLikes {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Wrapper-LikeButton {
+  .LikeButton-NumberLikes {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Wrapper-LikeButton {
-    margin-bottom: 28px;
+  .LikeButton-NumberLikes {
+    font-family: Montserrat-Regular;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 9px;
+    line-height: 12px;
+    /* identical to box height */
+
+    text-align: center;
+
+    /* Dark 25% */
+
+    color: $DatepickerGradient;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Wrapper-LikeButton {
+  .LikeButton-NumberLikes {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Wrapper-LikeButton {
+  .LikeButton-NumberLikes {
 
   }
 }
