--- a/Common.blocks/LikeButton/LikeButton.pug
+++ b/Common.blocks/LikeButton/LikeButton.pug
@@ -1,4 +1,4 @@
 mixin LikeButton(content)
-    div.LikeButton&attributes(attributes) #{content}
+    form.LikeButton&attributes(attributes)
         if block
             block
