--- a/Common.blocks/Wrapper/-LikeButtonWrapper/Wrapper-LikeButtonWrapper.scss
+++ b/Common.blocks/Wrapper/-LikeButtonWrapper/Wrapper-LikeButtonWrapper.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .Wrapper-LikeButton {
+  .Wrapper-LikeButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Wrapper-LikeButton {
+  .Wrapper-LikeButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Wrapper-LikeButton {
+  .Wrapper-LikeButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Wrapper-LikeButton {
+  .Wrapper-LikeButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Wrapper-LikeButton {
-    margin-bottom: 28px;
+  .Wrapper-LikeButtonWrapper {
+    display: flex;
+    flex-direction: row;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Wrapper-LikeButton {
+  .Wrapper-LikeButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Wrapper-LikeButton {
+  .Wrapper-LikeButtonWrapper {
 
   }
 }
