--- a/pages/index.scss
+++ b/pages/index.scss
@@ -216,3 +216,7 @@
 
 @import '../Common.blocks/LikeButton/-NumberLikes/_active/LikeButton-NumberLikes_active';
 @import '../Common.blocks/Wrapper/-LikeButtonWrapperFirst/Wrapper-LikeButtonWrapperFirst';
+@import '../Common.blocks/Wrapper/-LikeButtonWrapperFirst/Wrapper-LikeButtonWrapperFirst';
+@import '../Common.blocks/LikeButton/-Label/_active/LikeButton-Label_active';
+@import '../Common.blocks/LikeButton/-GradientBorder/LikeButton-GradientBorder';
+@import '../Common.blocks/LikeButton/-GradientBorder/_active/LikeButton-GradientBorder_active';
